[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-reg-tracker"
version = "0.1.0"
description = "Python client for the Global AI Regulation Tracker API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zsolt Tanko", email = "zsolt@conformanceai.com" },
]
keywords = [
    "ai",
    "regulation",
    "policy",
    "compliance",
    "api",
    "tracker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/aegis-blue-ai/ai-reg-tracker"
Repository = "https://github.com/aegis-blue-ai/ai-reg-tracker"
Issues = "https://github.com/aegis-blue-ai/ai-reg-tracker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ai-reg-render = "ai_reg_tracker.render:_cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_reg_tracker"]

[tool.pytest.ini_options]
markers = [
    "live: tests that call the live Global AI Regulation Tracker API",
]
